AC_PREREQ([2.61])
AC_INIT([Arabica], 1.0, [mengtao.sun@lehigh.edu])
AM_INIT_AUTOMAKE
LT_PREREQ([2.2])
LT_INIT([dlopen shared pic-only])
${CXXFLAGS="-g -O0"}
AC_PROG_CXX
AM_PROG_CC_C_O
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile include/Makefile thirdparty/Makefile thirdparty/linkedlist/Makefile librobusta/Makefile])
AC_OUTPUT
